# remote-kanban

./: .cursorrules  .env.gateway.example  .gitignore  Opencode_Vibe_Kanban_Modular_Plan.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/agent-runner/: Cargo.toml
crates/agent-runner/src/: client.rs  error.rs  event.rs  executor.rs  lib.rs  persistence.rs  process.rs  run.rs  session.rs
crates/agent-runner/src/parser/: mod.rs  opencode.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: feature_flags.rs  main.rs  socket.rs  state.rs
crates/api-server/src/audit/: mod.rs  store.rs  types.rs
crates/api-server/src/auth/: jwt.rs  mod.rs  store.rs  types.rs
crates/api-server/src/gateway/: handler.rs  manager.rs  mod.rs  protocol.rs
crates/api-server/src/host/: mod.rs  store.rs
crates/api-server/src/memory/: mod.rs  store.rs  types.rs
crates/api-server/src/routes/: auth.rs  executions.rs  executor.rs  gateway.rs  health.rs  hosts.rs  memory.rs  mod.rs  ops.rs  orgs.rs  project.rs  task.rs  workspace.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/agent/: mod.rs  opencode_client.rs
crates/core/src/kanban/: mod.rs  model.rs  store.rs
crates/core/src/project/: mod.rs  model.rs  store.rs
crates/core/src/run/: agent_type.rs  event.rs  mod.rs  persistence.rs  run_model.rs
crates/core/src/task/: file_store.rs  mod.rs  model.rs  repository.rs
crates/core/src/workspace/: mod.rs  model.rs  store.rs
crates/git-worktree/: Cargo.toml
crates/git-worktree/src/: commands.rs  error.rs  lib.rs  worktree.rs
docs/: e1-auth-tenant-pr.md
docs/analysis/: e3-smoke-test-runbook.md
docs/features/: _template.md  auth-tenant-v1.md  crate-agent-runner.md  crate-api-server.md  crate-git-worktree.md  crate-vk-core.md  dev-ci-quality-gates.md  dev-runtime-cleanup.md  execution-orchestrator-v1.md  host-enrollment-security-v1.md  index.md  kanban-realtime-sync.md  memory-enhanced-v1.md  ops-console-orchestrator-v1.md  package-client.md  package-protocol.md  package-pty-manager.md  package-server.md  service-agent-gateway.md  service-agent-memory.md  task-commands.md  task-execution-control.md  task-run-history.md  workspace-project-scope.md
docs/plans/: 2025-02-03-git-worktree-design.md  2026-01-25-rust-migration-design.md  2026-01-31-kanban-dev-cockpit-plan.md  2026-02-02-agent-gateway-architecture.md  2026-02-04-run-worktree-deletion.md  2026-02-04-runs-worktrees-deletion-design.md  2026-02-05-module-feature-docs-design.md  2026-02-05-task-runs-delete.md  2026-02-06-project-bound-task-execution-implementation.md  Opencode_Vibe_Kanban_Modular_Plan.md
docs/plans/2026-02-08-workspace-redesign/: 2026-02-08-project-workspace-binding-implementation-plan.md  2026-02-08-task-workspace-binding-implementation-plan.md  2026-02-08-workspace-foundation-implementation-plan.md  2026-02-09-create-task-workspace-filter-implementation-plan.md  2026-02-09-project-list-filter-implementation-plan.md  2026-02-09-run-context-implementation-plan.md  2026-02-09-run-summary-context-implementation-plan.md  2026-02-09-run-summary-legacy-backfill-implementation-plan.md  2026-02-09-task-list-filter-implementation-plan.md  progress.md
scripts/: check-feature-doc-index.mjs  cleanup-runtime.mjs  gateway-launcher.mjs  run-gateway.mjs  run-script-tests.mjs  smoke-e1-e2.ps1  smoke-e3.ps1
scripts/__tests__/: check-feature-doc-index.test.mjs  cleanup-runtime.test.mjs  gateway-launcher.test.mjs  run-script-tests.test.mjs
services/agent-gateway/: package-lock.json  package.json  start-gateway.ps1
services/agent-gateway/src/: config.test.ts  config.ts  connection.test.ts  connection.ts  e2e.test.ts  executor.test.ts  executor.ts  git.ts  index.ts  project.ts  types.ts
services/agent-gateway/src/memory/: extractor-llm.ts  extractor-rule.ts  index.ts  manager.ts  retriever.test.ts  retriever.ts  settings.test.ts  settings.ts  store-markdown.ts  store-sqlite.ts  types.ts
services/agent-worker/: package-lock.json  package.json
services/agent-worker/src/: index.js  index.js.map  index.ts
shared/api-types/: package-lock.json  package.json
shared/api-types/src/: agent.ts  event.ts  gateway.ts  index.ts  project.ts  task.ts
