[package]
name = "api-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vk-core = { path = "../core" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
