[package]
name = "api-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vk-core = { path = "../core" }
agent-runner = { path = "../agent-runner" }
git-worktree = { path = "../git-worktree" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
socketioxide.workspace = true
chrono.workspace = true
